Feat:Translations reviewed. Feat:Calendly ready. Feat:New Hero. Feat:BackToTop button.

--- a/src/components/layouts/PageLayout.astro
+++ b/src/components/layouts/PageLayout.astro
@@ -19,6 +19,12 @@ import { HeadHrefLangs } from "astro-i18next/components";
       type="image/x-icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐝</text></svg>"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       /* ! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com */
@@ -2049,5 +2055,13 @@ import { HeadHrefLangs } from "astro-i18next/components";
     <slot />
 
     <Footer />
+    <script
+      type="text/javascript"
+      src="https://assets.calendly.com/assets/external/widget.js"
+      async></script>
+    <link
+      href="https://assets.calendly.com/assets/external/widget.css"
+      rel="stylesheet"
+    />
   </body>
 </html>
