--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -15,7 +15,7 @@ const socials = t("footer.socialNetworks", { returnObjects: true });
     class="container flex flex-col items-center px-8 pt-8 mx-auto max-w-7xl sm:flex-row"
   >
     <a
-      href="#_"
+      href="#home"
       class="text-xl font-black leading-none text-white select-none logo"
     >
       <Trans i18nKey="navigation.home">
