--- a/src/components/sections/HowDoesItWork.astro
+++ b/src/components/sections/HowDoesItWork.astro
@@ -8,7 +8,7 @@ const lang = getLangFromUrl(Astro.url);
 changeLanguage(lang);
 ---
 
-<section class="">
+<section class="" id={t("navigation.process").toLowerCase()}>
   <div class="skew skew-top mr-for-radius"></div>
   <div class="skew skew-top ml-for-radius"></div>
   <div class="bg-gray-900 py-14 2xl:py-40 radius-for-skewed">
