--- a/src/components/sections/KeyFeatures.astro
+++ b/src/components/sections/KeyFeatures.astro
@@ -6,6 +6,7 @@ const keyFeatures = t("features.list", { returnObjects: true });
 
 <section
   class="relative w-full py-12 overflow-hidden md:py-20 xl:pb-40 bg-gray-900"
+  id={t("navigation.features").toLowerCase()}
 >
   <div class="md:text-center max-w-7xl mx-auto xl:px-0 px-5">
     <p
