--- a/src/components/sections/Advantages.astro
+++ b/src/components/sections/Advantages.astro
@@ -12,17 +12,17 @@ const advantages = t("advantages.points", { returnObjects: true });
         class="mb-6 text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight text-white"
       >
         <Trans i18nKey="advantages.title">
-          A
+          From
           <span
             class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
           >
-            Personal CTO
+            Z-Hero
           </span>
-          &amp;
+          to
           <span
             class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
           >
-            Tailored Development Service
+            Hero
           </span>
         </Trans>
         <img
