--- a/src/components/sections/FAQ.astro
+++ b/src/components/sections/FAQ.astro
@@ -11,6 +11,7 @@ const rightSideQuestions = questions.slice(half, questions.length);
 <section
   class="py-12 bg-gray-900 sm:py-16 md:py-20 lg:py-24 pb-28"
   data-primary="purple-600"
+  id={t("navigation.faq").toLowerCase()}
 >
   <div class="px-8 mx-auto lg:px-16 max-w-7xl">
     <div
