--- a/src/components/sections/Hero-copy.astro
+++ b/src/components/sections/Hero-copy.astro
@@ -1,22 +1,23 @@
 ---
+//NOTE: This is the dark version of the hero section
 import { t } from "i18next";
 import { Trans } from "astro-i18next/components";
 const challenges = t("hero.challenges", { returnObjects: true });
 ---
 
-<section class="relative pb-24 bg-green-500 font-sans">
+<section class="relative pb-24 bg-gray-900 font-sans">
   <div class="relative px-16 pt-20 pb-32 mx-auto max-w-7xl xl:px-16">
     <div class="max-w-5xl pt-24 mx-auto mb-24 text-center">
       <h1 class="text-6xl text-white mb-10 font-black">
         <Trans i18nKey="hero.title">
           The
           <span
-            class="w-full text-gray-900 bg-clip-text lg:inline"
+            class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
             >Challenge</span
           >
           of
           <span
-            class="w-full text-gray-900 bg-clip-text lg:inline"
+            class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
             >Launching your own MVP</span
           >
         </Trans>
@@ -46,23 +47,23 @@ const challenges = t("hero.challenges", { returnObjects: true });
               {index + 1}
             </span>
             <div class="z-10 relative rounded-md text-gray-200 p-4 max-w-md lg:max-w-lg h-full">
-              <p class="text-center font-bold text-gray-900 pb-4 text-2xl">
+              <p class="text-center font-bold text-green-500 pb-4 text-2xl">
                 <span class="text-4xl">{titleMoji}</span> {titleText}
               </p>
-              <p class="text-center text-gray-700">{challenge.description}</p>
+              <p class="text-center text-gray-400">{challenge.description}</p>
             </div>
           </div>
         )})
       }
     </div>
     <div
-      class="relative max-w-2xl lg:max-w-7xl mx-auto bg-dark-light px-8 sm:px-10 lg:ps-20 lg:pe-10 pt-28 mt-10 pb-10 rounded-lg overflow-hidden bg-gray-800 z-10"
+      class="relative max-w-2xl lg:max-w-7xl mx-auto bg-dark-light px-8 sm:px-10 lg:ps-20 lg:pe-10 pt-28 mt-10 pb-10 rounded-lg overflow-hidden bg-green-800 z-10"
     >
-      <div class="absolute top-0 start-0 w-full py-2 bg-gray-900">
+      <div class="absolute top-0 start-0 w-full py-2 bg-green-900">
         <div
-          class="flex py-1 items-center justify-center max-w-xs mx-auto bg-gray-700 rounded-lg"
+          class="flex py-1 items-center justify-center max-w-xs mx-auto bg-green-700 rounded-lg"
         >
-          <span class="fs-6 text-gray-400">fabrik.dev</span>
+          <span class="fs-6 text-green-400">fabrik.dev</span>
         </div>
       </div>
       <div class="flex flex-wrap items-center">
