--- a/src/components/sections/MeetCTO.astro
+++ b/src/components/sections/MeetCTO.astro
@@ -66,19 +66,27 @@ import { Trans } from "astro-i18next/components";
             <p class="mb-9 text-base xl:text-lg text-white leading-loose">
               {t("meetCto.quote.text")}
             </p>
-            <div class="flex justify-between items-center">
+            <div class="flex flex-col md:flex-row justify-between items-center">
               <div>
                 <p class="text-2xl font-bold text-yellow-300">
                   {t("meetCto.quote.name")}
                 </p>
                 <p class="text-lg text-gray-400">{t("meetCto.quote.job")}</p>
               </div>
-              <a
-                href="https://www.malt.fr/profile/jeremygv"
-                target="_blank"
-                class="text-lg text-gray-900 bg-yellow-300 px-4 py-2 font-bold rounded-md hover:bg-yellow-200"
-                >{t("meetCto.quote.malt.label")}</a
-              >
+              <div class="flex pt-10 md:pt-0 gap-3">
+                <a
+                  href="https://fr.linkedin.com/in/jeremandre"
+                  target="_blank"
+                  class="text-lg text-gray-900 bg-yellow-300 px-4 py-2 font-bold rounded-md hover:bg-yellow-200"
+                  >LinkedIn</a
+                >
+                <a
+                  href="https://www.malt.fr/profile/jeremygv"
+                  target="_blank"
+                  class="text-lg text-gray-900 bg-yellow-300 px-4 py-2 font-bold rounded-md hover:bg-yellow-200"
+                  >Malt</a
+                >
+              </div>
             </div>
           </div>
         </div>
