--- a/src/components/sections/OurSolution.astro
+++ b/src/components/sections/OurSolution.astro
@@ -14,24 +14,16 @@ import { Trans } from "astro-i18next/components";
       class="mb-6 text-5xl font-extrabold leading-none max-w-5xl mx-auto tracking-normal sm:text-6xl md:text-6xl lg:text-7xl md:tracking-tight text-white"
     >
       <Trans i18nKey="solution.title">
-        <p>
-          <span
-            class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
-            >Expert CTO Services</span
-          >
-          -
-        </p>
-        <p>
-          <span
-            class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
-            >Your</span
-          >
-          Vision. Our
-          <span
-            class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
-            >Reality</span
-          >
-        </p>
+        Your own
+        <span
+          class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
+          >Personal CTO</span
+        >
+        &
+        <span
+          class="w-full text-transparent bg-clip-text bg-gradient-to-r from-green-400 via-blue-400 to-purple-400 lg:inline"
+          >Tailored Development Package</span
+        >
       </Trans>
     </h1>
     <p
