--- a/src/components/sections/Testimonials.astro
+++ b/src/components/sections/Testimonials.astro
@@ -3,7 +3,7 @@ import { t } from "i18next";
 import { Trans } from "astro-i18next/components";
 ---
 
-<section class="w-full bg-gray-900 sm:py-16 py-12 md:py-20 relative">
+<section class="w-full bg-gray-900 sm:py-16 py-12 md:py-20 relative" id={t("navigation.testimonials").toLowerCase()}>
   <div class="max-w-7xl mx-auto px-10">
     <div
       class="flex flex-col mb-7 sm:mb-20 items-start md:items-center justify-center"
