--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,27 +3,33 @@ import { changeLanguage } from "i18next";
 import Advantages from "@/components/sections/Advantages.astro";
 import CTA from "@/components/sections/CTA.astro";
 import FAQSection from "@/components/sections/FAQ.astro";
-import Hero from "@/components/sections/Hero.astro";
 import KeyFeatures from "@/components/sections/KeyFeatures.astro";
 import HowDoesItWork from "@/components/sections/HowDoesItWork.astro";
 import MeetCTO from "@/components/sections/MeetCTO.astro";
 import OurSolution from "@/components/sections/OurSolution.astro";
 import Testimonials from "@/components/sections/Testimonials.astro";
 import Layout from "@components/layouts/PageLayout.astro";
+import Hero from "@/components/sections/Hero.astro";
+import WhyChooseUs from "@/components/sections/WhyChooseUs.astro";
+import Brevo from "@/components/sections/Brevo";
+import BackToTopButton from "@/components/sections/BackToTopButton.astro";
+import HeroCopy from "@/components/sections/Hero-copy.astro";
 
 changeLanguage("en");
 ---
 
 <Layout>
-  <Hero />
+  <HeroCopy />
   <OurSolution />
+  <WhyChooseUs />
+  <HowDoesItWork />
   <KeyFeatures />
   <Advantages />
-  <HowDoesItWork />
   <Testimonials />
   <FAQSection />
   <MeetCTO />
   <CTA />
+  <Brevo />
   <section class="relative bg-gray-900 overflow-hidden">
     <div
       class="relative max-w-xs xs:max-w-md sm:max-w-lg lg:max-w-2xl xl:max-w-3xl px-4 mx-auto py-36"
@@ -101,4 +107,5 @@ changeLanguage("en");
       <div class="absolute top-0 right-0 h-full w-px bg-gray-700"></div>
     </div>
   </section>
+  <BackToTopButton />
 </Layout>
